--- a/public/index.html
+++ b/public/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>transport-time</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="nav-bare">
-        <div class="logo">
-          <a href="">time-transport</a>
-        </div>
-        <ul class="list-nav">
-          <li><a href="">home</a></li>
-          <li><a href="">about us</a></li>
-          <li><a href="">tiket</a></li>
-          <li><a href="">contact us</a></li>
-        </ul>
-        <div class="left-nav">
-          <button>get started</button>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>transport-time</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="nav-bare">
+      <div class="logo">
+        <a href="">time-transport</a>
       </div>
-      <div class="section">
-        <div class="info">
-          <h1>tanger,morocco</h1>
-          <p>your devide fore your travle in moroco an the world</p>
-          <p>wellcom to oure world</p>
+      <ul class="list-nav">
+        <li><a href="">home</a></li>
+        <li><a href="">about us</a></li>
+        <li><a href="">tiket</a></li>
+        <li><a href="">contact us</a></li>
+      </ul>
+      <div class="left-nav">
+        <button>get started</button>
+      </div>
+    </div>
+    <div class="section">
+      <div class="info">
+        <h1>tanger,morocco</h1>
+        <p>your devide fore your travle in moroco an the world</p>
+        <p>wellcom to oure world</p>
+      </div>
+      <div class="input-container">
+        <div class="frist">
+          <select id="cities_from" name=""></select>
+          <select id="cities_to" name=""></select>
+
+          <button class="ser">serche</button>
         </div>
-        <div class="input-container">
-          <div class="frist">
-            <select class="friste-input" name="" id=""></select>
-            
-            <button class="ser">serche</button>
-          </div>
+        <div class="card1">
+
         </div>
       </div>
     </div>
-  </body>
-  <script src="api.js"></script>
+  </div>
+</body>
+<script src="app.js"></script>
+
 </html>
