--- a/public/index.html
+++ b/public/index.html
@@ -32,18 +32,18 @@
     </div>
     <div class="section">
       <div class="info">
-        <h1>tanger,morocco</h1>
-        <p>your devide fore your travle in moroco an the world</p>
-        <p>wellcom to oure world</p>
+        <h1 class="front">tanger,morocco</h1>
+        <p class="front">your devide fore your travle in moroco an the world</p>
+        <p class="front">wellcom to oure world</p>
       </div>
-      <div class="input-container">
-        <div class="frist">
+      <div class="input-container front">
+        <div class="frist front">
           <select id="cities_from" name=""></select>
           <select id="cities_to" name=""></select>
 
-          <button class="ser">serche</button>
+          <button class="ser front">Search</button>
         </div>
-        <div class="card1">
+        <div class="card1 front">
 
         </div>
       </div>
