--- a/public/trip.html
+++ b/public/trip.html
@@ -1,96 +1,124 @@
-const url="http://localhost:3000"
-const selection_from=document.getElementById("cities_from")
-const selection_to=document.getElementById("cities_to")
-const resultContainer=document.getElementById("card1")
-const menuToggle=document.getElementById("menu-toggle")
-const navLinks=document.getElementById("nav-links")
-const loginModal=document.getElementById("login-modal")
-const aiPlannerModal=document.getElementById("ai-planner-modal")
-const tabBtns=document.querySelectorAll(".tab-btn")
-const tabContents=document.querySelectorAll(".tab-content")
-const closeModalBtns=document.querySelectorAll(".close-modal")
-const openAiPlannerBtn=document.getElementById("open-ai-planner")
-const aiPlannerForm=document.getElementById("ai-planner-form")
-const aiResult=document.getElementById("ai-result")
-const aiLoading=document.querySelector(".ai-loading")
-const aiItinerary=document.querySelector(".ai-itinerary")
-const itineraryContent=document.getElementById("itinerary-content")
-const contactForm=document.getElementById("contact-form")
-const newsletterForm=document.getElementById("newsletter-form")
-const destinationsCard = document.getElementById("dest-cards")
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./style.css">
+  <title>TriperBus - Explore Morocco by Bus</title>
+</head>
+<body style="background-color: white;">
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <a href="index.html">
+          <span class="logo-icon"><i class="fas fa-bus-alt"></i></span>
+          <span class="logo-text">TriperBus</span>
+        </a>
+      </div>
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="#destinations">Destinations</a></li>
+        <li><a href="#travel-tips">Travel Tips</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li class="nav-cta"><a href="#login" class="btn btn-outline">Login</a></li>
+      </ul>
+    </nav>
+  </header>
 
-async function Getdestination(limit) {
-    try {
-        const response=await fetch(`${url}/destinations?limit=${limit}`)
-        let data
-        if(!response.ok){
-            console.warn("Using mock city data as API is not available")
-        }else{
-            data=await response.json()
-        }
-        data.forEach((city)=>{
-            const cadre = document.createElement("div");
-            cadre.className = "destination-card";
-            cadre.innerHTML = `
-            <div class="destination-img" style="background-image: url('${city.image}')"></div>
-              <div class="destination-info">
-                <h3>${city.name}</h3>
-                <p>${city.description}</p>
-                <a href="#" class="btn btn-sm">Explore Routes</a>
-            </div>
-        `;
-            destinationsCard.appendChild(cadre);
-        })
-    } catch (error) {
-        console.error("Error fetching destinations:",error)
-    }
+  <br>
+  <h1 style="
+    width: 100%;
+    height: auto;
+    background-color: white;
+    margin-top: 70px;
+    text-align: center;
+    color: var(--primary-color);
+">Trip Details</h1>
+  <div id="card1" class="results-container" style="display: block !important; margin-top: 80px;">
+  </div>
 
-}
-Getdestination(6)
-async function Get_Cities(){
-  try{
-    const response=await fetch(`${url}/cities`)
-    let data
-    if(!response.ok){
-      console.warn("Using mock city data as API is not available")
-      data=[{id:1,name:"Casablanca"},{id:2,name:"Marrakech"},{id:3,name:"Fes"},{id:4,name:"Tangier"},{id:5,name:"Rabat"},{id:6,name:"Agadir"},{id:7,name:"Essaouira"},{id:8,name:"Chefchaouen"},{id:9,name:"Meknes"},{id:10,name:"Ouarzazate"}]
-    }else{
-      data=await response.json()
-    }
-    selection_from.innerHTML=`<option value="" disabled selected>Select Departure City</option>`
-    selection_to.innerHTML=`<option value="" disabled selected>Select Arrival City</option>`
-    data.forEach((city)=>{
-      const option_from=document.createElement("option")
-      const option_to=document.createElement("option")
-      option_from.value=city.id
-      option_from.textContent=city.name
-      option_to.value=city.id
-      option_to.textContent=city.name
-      selection_from.appendChild(option_from)
-      selection_to.appendChild(option_to)
-    })
-  }catch(error){
-    console.error("Error fetching cities:",error)
-    resultContainer.innerHTML=`
-            <div class="error-message">
-                <i class="fas fa-exclamation-circle"></i>
-                <p>Error loading cities. Please try again later.</p>
-            </div>
-        `
-    const mockCities=[{id:1,name:"Casablanca"},{id:2,name:"Marrakech"},{id:3,name:"Fes"},{id:4,name:"Tangier"},{id:5,name:"Rabat"}]
-    mockCities.forEach((city)=>{
-      const option_from=document.createElement("option")
-      const option_to=document.createElement("option")
-      option_from.value=city.id
-      option_from.textContent=city.name
-      option_to.value=city.id
-      option_to.textContent=city.name
-      selection_from.appendChild(option_from)
-      selection_to.appendChild(option_to)
-    })
-  }
-}
-async function searchTrips(dep,arv){
+  <footer>
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="index.html">
+          <span class="logo-icon"><i class="fas fa-bus-alt"></i></span>
+          <span class="logo-text">TriperBus</span>
+        </a>
+        <p>Your gateway to exploring Morocco by bus</p>
+      </div>
+      <div class="footer-links">
+        <div class="footer-column">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#destinations">Destinations</a></li>
+            <li><a href="#travel-tips">Travel Tips</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Popular Routes</h3>
+          <ul>
+            <li><a href="#">Casablanca to Marrakech</a></li>
+            <li><a href="#">Marrakech to Essaouira</a></li>
+            <li><a href="#">Fes to Chefchaouen</a></li>
+            <li><a href="#">Tangier to Tetouan</a></li>
+            <li><a href="#">Rabat to Casablanca</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Support</h3>
+          <ul>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Booking Policy</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-newsletter">
+        <h3>Subscribe to Our Newsletter</h3>
+        <p>Get the latest updates and travel tips</p>
+        <form id="newsletter-form">
+          <input type="email" placeholder="Your email address" required>
+          <button type="submit" class="btn btn-primary">Subscribe</button>
+        </form>
+        <div class="social-links">
+          <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+          <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2023 TriperBus. All rights reserved.</p>
+      <div class="payment-methods">
+        <i class="fab fa-cc-visa"></i>
+        <i class="fab fa-cc-mastercard"></i>
+        <i class="fab fa-cc-paypal"></i>
+      </div>
+    </div>
+  </footer>
+  <script>
+    const params = new URLSearchParams(window.location.search);
+
+    const resultContainer=document.getElementById("card1")
+
+    const dep = params.get("dep");
+    const dest = params.get("dest");
+
+    async function searchTrips(dep,arv){
   try{
     resultContainer.innerHTML=`
       <div class="loading">
@@ -98,21 +126,11 @@ async function searchTrips(dep,arv){
         <p>Searching for trips...</p>
       </div>
     `
-    const response=await fetch(`${url}/trips?dep=${dep}&arv=${arv}`)
+    const response= await fetch(`/trips?dep=${dep}&arv=${dest}`)
     let data
     if(!response.ok){
       console.warn("Using mock trip data as API is not available")
-      const depCity=selection_from.options[selection_from.selectedIndex].text
-      const arvCity=selection_to.options[selection_to.selectedIndex].text
-      data={
-        dep:depCity,
-        arv:arvCity,
-        trips:[
-          {id:"31434",bus:"Sahara Prestige",d_city:depCity,a_city:arvCity,d_time:"19:00",a_time:"22:30",distance:"181KM",duration:"03h 30m",stations_nb:0,stations:[],services:{wifi:"0",climate:"1",highway:"0"}},
-          {id:"30887",bus:"El Hillal Sobet",d_city:depCity,a_city:arvCity,d_time:"22:00",a_time:"01:30",distance:"181KM",duration:"03h 30m",stations_nb:0,stations:[],services:{wifi:"1",climate:"1",highway:"0"}},
-          {id:"30723",bus:"Sahara Voyage",d_city:depCity,a_city:arvCity,d_time:"10:00",a_time:"13:30",distance:"181KM",duration:"03h 30m",stations_nb:0,stations:[],services:{wifi:"0",climate:"1",highway:"1"}}
-        ]
-      }
+
     }else{
       data=await response.json()
     }
@@ -325,193 +343,8 @@ function renderStations(stations){
   `).join("")
   return stationsHtml
 }
-function toggleMenu(){
-  navLinks.classList.toggle("active")
-}
-function openModal(modal){
-  modal.style.display="block"
-  document.body.style.overflow="hidden"
-}
-function closeModal(modal){
-  modal.style.display="none"
-  document.body.style.overflow="auto"
-}
-function switchTab(e){
-  const tabId=e.target.dataset.tab
-  tabBtns.forEach((btn)=>btn.classList.remove("active"))
-  tabContents.forEach((content)=>content.classList.remove("active"))
-  e.target.classList.add("active")
-  document.getElementById(`${tabId}-tab`).classList.add("active")
-}
-function generateAIItinerary(e){
-  e.preventDefault()
-  aiResult.classList.remove("hidden")
-  aiLoading.style.display="block"
-  aiItinerary.classList.add("hidden")
-  const duration=document.getElementById("trip-duration").value
-  const startingCity=document.getElementById("trip-starting-city").value
-  const budget=document.getElementById("trip-budget").value
-  const interests=[]
-  document.querySelectorAll('input[name="interests"]:checked').forEach((checkbox)=>{
-    interests.push(checkbox.value)
-  })
-  setTimeout(()=>{
-    aiLoading.style.display="none"
-    aiItinerary.classList.remove("hidden")
-    let itinerary=`<h4>${duration}-Day ${startingCity.charAt(0).toUpperCase()+startingCity.slice(1)} Itinerary (${budget.charAt(0).toUpperCase()+budget.slice(1)} Budget)</h4>`
-    itinerary+=`<p>Based on your interests: ${interests.join(", ")}</p>`
-    for(let i=1;i<=Math.min(duration,7);i++){
-      itinerary+=`
-                <div class="itinerary-day">
-                    <h5>Day ${i}</h5>
-                    <ul>
-            `
-      if(i===1){
-        itinerary+=`<li>Morning: Explore ${startingCity.charAt(0).toUpperCase()+startingCity.slice(1)} city center</li>`
-      }else{
-        if(interests.includes("culture")){
-          itinerary+=`<li>Morning: Visit local museum or historical site</li>`
-        }else if(interests.includes("nature")){
-          itinerary+=`<li>Morning: Hike in nearby natural park</li>`
-        }else{
-          itinerary+=`<li>Morning: Explore local markets</li>`
-        }
-      }
-      if(interests.includes("food")){
-        itinerary+=`<li>Lunch: Traditional Moroccan cuisine at local restaurant</li>`
-      }else{
-        itinerary+=`<li>Lunch: Meal at recommended café</li>`
-      }
-      if(interests.includes("shopping")){
-        itinerary+=`<li>Afternoon: Shopping in the medina</li>`
-      }else if(interests.includes("adventure")){
-        itinerary+=`<li>Afternoon: Desert excursion or water activities</li>`
-      }else{
-        itinerary+=`<li>Afternoon: Guided city tour</li>`
-      }
-      if(interests.includes("relaxation")){
-        itinerary+=`<li>Evening: Relax at a spa or hammam</li>`
-      }else{
-        itinerary+=`<li>Evening: Dinner and cultural entertainment</li>`
-      }
-      itinerary+=`
-                    </ul>
-                </div>
-            `
-    }
-    itinerary+=`
-            <div class="transportation-info">
-                <h5>Transportation</h5>
-                <p>Bus tickets will be available for booking between all destinations in your itinerary.</p>
-            </div>
-        `
-    itineraryContent.innerHTML=itinerary
-  },2000)
-}
-document.addEventListener("DOMContentLoaded",()=>{
-  Get_Cities()
-  document.getElementById("ser").addEventListener("click",()=>{
-    const dep=Number.parseFloat(selection_from.value)
-    const arv=Number.parseFloat(selection_to.value)
-    if(!dep||!arv){
-      resultContainer.style.display="block";
-      resultContainer.innerHTML=`
-                <div class="error-message">
-                    <i class="fas fa-exclamation-triangle"></i>
-                    <p>Please select both departure and arrival cities.</p>
-                </div>
-            `
-      return
-    }
-    if(dep===arv){
-      resultContainer.style.display="block";
-      resultContainer.innerHTML=`
-                <div class="error-message">
-                    <i class="fas fa-exclamation-triangle"></i>
-                    <p>Departure and arrival cities cannot be the same.</p>
-                </div>
-            `
-      return
-    }
-    resultContainer.style.display="none";
-    window.location.href=`/trip?dep=${dep}&dest=${arv}`;
-  })
-  if(menuToggle){
-    menuToggle.addEventListener("click",toggleMenu)
-  }
-  document.querySelectorAll(".nav-cta a").forEach((link)=>{
-    link.addEventListener("click",(e)=>{
-      e.preventDefault()
-      openModal(loginModal)
-    })
-  })
-  if(openAiPlannerBtn){
-    openAiPlannerBtn.addEventListener("click",()=>{
-      openModal(aiPlannerModal)
-    })
-  }
-  closeModalBtns.forEach((btn)=>{
-    btn.addEventListener("click",()=>{
-      const modal=btn.closest(".modal")
-      closeModal(modal)
-    })
-  })
-  window.addEventListener("click",(e)=>{
-    if(e.target.classList.contains("modal")){
-      closeModal(e.target)
-    }
-  })
-  tabBtns.forEach((btn)=>{
-    btn.addEventListener("click",switchTab)
-  })
-  if(aiPlannerForm){
-    aiPlannerForm.addEventListener("submit",generateAIItinerary)
-  }
-  if(contactForm){
-    contactForm.addEventListener("submit",(e)=>{
-      e.preventDefault()
-      alert("Thank you for your message! We will get back to you soon.")
-      contactForm.reset()
-    })
-  }
-  if(newsletterForm){
-    newsletterForm.addEventListener("submit",(e)=>{
-      e.preventDefault()
-      alert("Thank you for subscribing to our newsletter!")
-      newsletterForm.reset()
-    })
-  }
-  document.querySelectorAll('a[href^="#"]').forEach((anchor)=>{
-    anchor.addEventListener("click",function(e){
-      if(this.getAttribute("href")!=="#login"){
-        e.preventDefault()
-        const target=document.querySelector(this.getAttribute("href"))
-        if(target){
-          window.scrollTo({
-            top:target.offsetTop-80,
-            behavior:"smooth"
-          })
-          if(navLinks.classList.contains("active")){
-            toggleMenu()
-          }
-        }
-      }
-    })
-  })
-  window.addEventListener("scroll",()=>{
-    const scrollPosition=window.scrollY
-    document.querySelectorAll("section[id]").forEach((section)=>{
-      const sectionTop=section.offsetTop-100
-      const sectionHeight=section.offsetHeight
-      const sectionId=section.getAttribute("id")
-      if(scrollPosition>=sectionTop&&scrollPosition<sectionTop+sectionHeight){
-        document.querySelector(`.nav-links a[href="#${sectionId}"]`)?.classList.add("active")
-      }else{
-        document.querySelector(`.nav-links a[href="#${sectionId}"]`)?.classList.remove("active")
-      }
-    })
-  })
-})
+    searchTrips(dep, dest)
+
 document.addEventListener("DOMContentLoaded",()=>{
   const style=document.createElement("style")
   style.textContent=`
@@ -727,3 +560,6 @@ document.addEventListener("DOMContentLoaded",()=>{
     `
   document.head.appendChild(style)
 })
+  </script>
+</body>
+</html>
