--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
               <div class="form-group from-group">
                 <label for="cities_from">
                   <i class="fas fa-map-marker-alt"></i>
-                  <span>From</span>
+                  <span style="color: white !important;">From</span>
                 </label>
                 <select id="cities_from" name="cities_from"></select>
               </div>
@@ -54,7 +54,7 @@
               <div class="form-group to-group">
                 <label for="cities_to">
                   <i class="fas fa-map-pin"></i>
-                  <span>To</span>
+                  <span style="color: white !important;">To</span>
                 </label>
                 <select id="cities_to" name="cities_to"></select>
               </div>
@@ -329,12 +329,6 @@
           <div class="form-group">
             <label for="trip-starting-city">Starting City</label>
             <select id="trip-starting-city" name="trip-starting-city" required>
-              <option value="">Select a city</option>
-              <option value="casablanca">Casablanca</option>
-              <option value="marrakech">Marrakech</option>
-              <option value="fes">Fes</option>
-              <option value="tangier">Tangier</option>
-              <option value="rabat">Rabat</option>
             </select>
           </div>
           <button type="submit" class="btn btn-primary btn-block">
